fix webcam image sizes on mobile

--- a/src/less/_roadconditions-public.less
+++ b/src/less/_roadconditions-public.less
@@ -276,7 +276,7 @@ ul {
     }
 
     .webcam {
-        width: 50%;
+        width: 100%;
         float: none;
     }
 } // close BREAKPOINT 2
